Rename to pactl-json

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 docs.json
 __dummy.html
 docs/
-/volume-ctl
-volume-ctl.so
-volume-ctl.dylib
-volume-ctl.dll
-volume-ctl.a
-volume-ctl.lib
-volume-ctl-test-*
+/pactl-json
+pactl-json.so
+pactl-json.dylib
+pactl-json.dll
+pactl-json.a
+pactl-json.lib
+pactl-json-test-*
 *.exe
 *.o
 *.obj
